--- a/1.html
+++ b/1.html
@@ -1,11 +1,9 @@
 <html>
 <head>
-<title> ¿©½ÅÀÇ ¿öµåÇÁ·Î¼¼¼­ </title>
+<title>ì—¬ì‹ ì˜ ì›Œë“œìš”ì ì •ë¦¬</title>
 </head>
-
 <body>
-¿öµå·¦ : ¿µ¾î ´Ü¾î°¡ ´ÙÀ½ÁÙ·Î ³Ñ¾î°¨.
-<body>
-
-
+ì›Œë“œëž©<br>
+ì˜ë¬¸ê· ë“±
+</body>
 </html>
